helm/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 80
  selector:
    app: demo-selector
