helm/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
    - hosts:
        - tarrasque.app
      secretName: demo-tls
  rules:
    - host: tarrasque.app
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-service
                port:
                  number: 80
